@@ -12,6 +12,10 @@ typedef struct flock flock_t;
 #define os_strsignal strsignal
 #define OS_STRSIGNAL
 
+#define os_get_dns_resolver_res __res_get_state
+#define os_put_dns_resolver_res(RP) __res_put_state(RP)
+#define OS_GET_DNS_RESOLVER_RES
+
 #include <sys/param.h>
 
 #if __NetBSD_Version__ >= 299000900
